# cel-spec

testdata/: BUILD.bazel  test_data.proto  test_value.proto
